# dayseam

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml
apps/desktop/src-tauri/: Cargo.toml  build.rs  capabilities.dev.template.json  entitlements.md  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  oauth_persister.rs  oauth_session.rs  scheduler_task.rs  startup.rs  state.rs  tracing_init.rs
apps/desktop/src-tauri/src/ipc/: atlassian.rs  broadcast_forwarder.rs  commands.rs  github.rs  mod.rs  outlook.rs  outlook_jwt.rs  run_forwarder.rs  scheduler.rs  secret.rs
apps/desktop/src-tauri/tests/: capabilities.rs  reconnect_rebind.rs  updater_signature.rs
crates/connectors-sdk/: Cargo.toml
crates/connectors-sdk/src/: auth.rs  dtos.rs  http.rs  lib.rs  mock.rs  oauth.rs  sync.rs
crates/connectors-sdk/tests/: basic_auth.rs  github_pat_auth.rs  http_retry.rs  oauth.rs
crates/connectors/connector-atlassian-common/: Cargo.toml
crates/connectors/connector-atlassian-common/src/: adf.rs  cloud.rs  errors.rs  identity.rs  lib.rs  pagination.rs
crates/connectors/connector-atlassian-common/tests/: cloud.rs  pagination.rs
crates/connectors/connector-confluence/: Cargo.toml
crates/connectors/connector-confluence/src/: connector.rs  lib.rs  normalise.rs  rollup.rs  walk.rs
crates/connectors/connector-confluence/tests/: scaffold.rs  walk.rs
crates/connectors/connector-gitlab/: Cargo.toml
crates/connectors/connector-gitlab/src/: auth.rs  connector.rs  errors.rs  events.rs  lib.rs  normalise.rs  project.rs  walk.rs
crates/connectors/connector-gitlab/tests/: sync.rs
crates/connectors/connector-local-git/: Cargo.toml
crates/connectors/connector-local-git/src/: connector.rs  discovery.rs  lib.rs  privacy.rs  walk.rs
crates/connectors/connector-local-git/tests/: no_cross_crate_leak.rs  sync.rs
crates/connectors/connector-local-git/tests/common/: mod.rs
crates/connectors/connector-outlook/: Cargo.toml
crates/connectors/connector-outlook/src/: auth.rs  config.rs  connector.rs  errors.rs  events.rs  lib.rs  normalise.rs  walk.rs
crates/dayseam-core/: Cargo.toml
crates/dayseam-core/src/: error.rs  error_codes.rs  lib.rs
crates/dayseam-core/src/runtime/: mod.rs  supervised_spawn.rs
crates/dayseam-core/src/snapshots/: dayseam_core__error_codes__tests__registry_snapshot.snap
crates/dayseam-core/src/types/: activity.rs  artifact.rs  events.rs  identity.rs  mod.rs  repo.rs  report.rs  run.rs  schedule.rs  settings.rs  sink.rs  source.rs
crates/dayseam-core/tests/: error_codes.rs  serde_round_trip.rs  ts_types_generated.rs
crates/dayseam-db/: Cargo.toml
crates/dayseam-db/migrations/: 0001_initial.sql  0002_artifact_syncrun.sql  0003_person_source_identity.sql  0005_secret_ref_index.sql
crates/dayseam-db/src/: error.rs  lib.rs  pool.rs
crates/dayseam-db/src/repairs/: confluence_email.rs  mod.rs
crates/dayseam-db/src/repos/: activity_events.rs  artifacts.rs  drafts.rs  helpers.rs  identities.rs  local_repos.rs  logs.rs  mod.rs  persons.rs  raw_payloads.rs  settings.rs  source_identities.rs  sources.rs  sync_runs.rs
crates/dayseam-db/tests/: repos.rs
crates/dayseam-events/: Cargo.toml
crates/dayseam-events/src/: app_bus.rs  lib.rs  run_streams.rs
crates/dayseam-events/tests/: bus.rs
crates/dayseam-macros/: Cargo.toml
crates/dayseam-macros/src/: lib.rs
crates/dayseam-macros/tests/: serde_default_audit.rs
crates/dayseam-macros/tests/trybuild/fail/: activity_event_serde_default_without_audit.rs  activity_event_serde_default_without_audit.stderr  artifact_payload_serde_default_without_audit.rs  artifact_payload_serde_default_without_audit.stderr  empty_no_repair_reason.rs  empty_no_repair_reason.stderr  empty_repair_name.rs  empty_repair_name.stderr  log_entry_serde_default_without_audit.rs  log_entry_serde_default_without_audit.stderr  missing_audit_annotation.rs  missing_audit_annotation.stderr  per_source_state_serde_default_without_audit.rs  unknown_audit_key.rs  (+6 more)
crates/dayseam-orchestrator/: Cargo.toml
crates/dayseam-orchestrator/src/: generate.rs  lib.rs  orchestrator.rs  registries.rs  save.rs
crates/dayseam-orchestrator/src/schedule/: mod.rs
crates/dayseam-orchestrator/tests/: atlassian_integration.rs  github_integration.rs  happy_path.rs  multi_source_dedup.rs  no_inline_run_streams_construction.rs  scheduler.rs  server_error_symmetry.rs
crates/dayseam-orchestrator/tests/common/: mod.rs
crates/dayseam-report/: Cargo.toml
crates/dayseam-report/proptest-regressions/: dedup.txt
crates/dayseam-report/src/: dedup.rs  enrich.rs  error.rs  group_key.rs  input.rs  lib.rs  pipeline.rs  render.rs  rollup.rs  rollup_mr.rs  sections.rs
crates/dayseam-report/src/templates/: dev_eod.rs  mod.rs
crates/dayseam-report/tests/: dedup.rs  enrich.rs  golden.rs  invariants.rs  mr_promotion.rs  no_cross_crate_leak.rs  rollup_mr.rs
crates/dayseam-report/tests/common/: mod.rs
crates/dayseam-report/tests/snapshots/: golden__dev_eod_confluence_two_spaces.snap  golden__dev_eod_empty_day.snap  golden__dev_eod_filters_non_self.snap  golden__dev_eod_jira_two_projects.snap  golden__dev_eod_mixed_commits_jira_confluence.snap  golden__dev_eod_multi_repo.snap  golden__dev_eod_private_repo.snap  golden__dev_eod_single_repo.snap  golden__dev_eod_verbose.snap
crates/dayseam-secrets/: Cargo.toml
crates/dayseam-secrets/src/: error.rs  keychain.rs  lib.rs  memory.rs  oauth.rs  secret.rs  store.rs
crates/dayseam-secrets/tests/: secret_redaction.rs
crates/sinks-sdk/: Cargo.toml
crates/sinks-sdk/src/: adapter.rs  ctx.rs  lib.rs  mock.rs
crates/sinks-sdk/tests/: capabilities.rs  mock_sink.rs  no_cross_crate_leak.rs
crates/sinks/sink-markdown-file/: Cargo.toml
crates/sinks/sink-markdown-file/src/: adapter.rs  atomic.rs  frontmatter.rs  lib.rs  lock.rs  markdown.rs  markers.rs
crates/sinks/sink-markdown-file/tests/: no_cross_crate_leak.rs  roundtrip.rs
(+229 files in other folders)
