[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/dayseam-core",
    "crates/dayseam-db",
    "crates/dayseam-secrets",
    "crates/dayseam-events",
    "crates/dayseam-report",
    "crates/connectors-sdk",
    "crates/connectors/connector-local-git",
    "crates/connectors/connector-gitlab",
    "crates/sinks-sdk",
    "crates/sinks/sink-markdown-file",
    "crates/dayseam-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/vedanthvdev/dayseam"
authors = ["Dayseam contributors"]
rust-version = "1.88"
# Every workspace crate is an internal component of the Dayseam desktop
# app; none of them are intended for crates.io publication. Opting every
# one out of publishing at the workspace level means a future refactor
# can't accidentally release an internal helper.
publish = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tracing = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
