[package]
name = "dayseam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core domain types, error taxonomy, and traits shared across Dayseam crates."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ts-rs = { version = "12", features = [
    "serde-compat",
    "chrono-impl",
    "uuid-impl",
    "serde-json-impl",
] }
# DAY-90 TST-v0.2-06. `SerdeDefaultAudit` is a compile-time lint
# macro: every type in this crate with a `#[serde(default)]` field
# must name the paired `SerdeDefaultRepair` or justify the waiver.
# Declared as a regular dependency (not dev) because the derive is
# on production types (`SourceConfig`, `EntityRef`), not tests.
dayseam-macros = { path = "../dayseam-macros" }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
proptest = "1"
