[package]
name = "dayseam-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Core domain types, error taxonomy, and traits shared across Dayseam crates."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ts-rs = { version = "12", features = [
    "serde-compat",
    "chrono-impl",
    "uuid-impl",
    "serde-json-impl",
] }
# DAY-90 TST-v0.2-06. `SerdeDefaultAudit` is a compile-time lint
# macro: every type in this crate with a `#[serde(default)]` field
# must name the paired `SerdeDefaultRepair` or justify the waiver.
# Declared as a regular dependency (not dev) because the derive is
# on production types (`SourceConfig`, `EntityRef`), not tests.
dayseam-macros = { path = "../dayseam-macros" }
# DAY-113 / F-10. `runtime::supervised_spawn` wraps tokio spawns so a
# panic in a background future is caught, logged through `tracing`,
# and the task completes cleanly from the supervisor's perspective.
# Both deps are already workspace-level so no new version is pinned
# here; the runtime module lives in `dayseam-core` because both the
# desktop app (`apps/desktop/src-tauri`) and the orchestrator crate
# (`crates/dayseam-orchestrator`) need it and `dayseam-core` is the
# only crate both already depend on.
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
proptest = "1"
# DAY-113. The `supervised_spawn` unit tests assert the helper's
# `tracing` emissions land on the configured subscriber; this is the
# lightest way to capture subscriber events in-process.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-test = "0.2"
