[package]
name = "dayseam-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "SQLite persistence layer for Dayseam: schema, migrations, and typed repositories."

[dependencies]
