[package]
name = "dayseam-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "SQLite persistence layer for Dayseam: schema, migrations, and typed repositories."

[dependencies]
# `runtime-tokio` pairs with the workspace's tokio runtime. No TLS feature
# is needed for local SQLite.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "uuid",
    "macros",
    "migrate",
] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dayseam-core = { path = "../dayseam-core" }

[dev-dependencies]
tempfile = "3"
