[package]
name = "dayseam-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Per-run streams and app-wide broadcast bus for Dayseam progress, log, and toast events."

[dependencies]
dayseam-core = { path = "../dayseam-core", version = "0.0.0" }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
