[package]
name = "dayseam-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Dayseam orchestrator: generate-report lifecycle, SyncRun durability, fan-out, cancellation, supersede-on-retry."

[dependencies]
dayseam-core = { path = "../dayseam-core" }
dayseam-db = { path = "../dayseam-db" }
dayseam-events = { path = "../dayseam-events" }
dayseam-report = { path = "../dayseam-report" }
connectors-sdk = { path = "../connectors-sdk" }
sinks-sdk = { path = "../sinks-sdk" }
connector-gitlab = { path = "../connectors/connector-gitlab" }
connector-jira = { path = "../connectors/connector-jira" }
connector-local-git = { path = "../connectors/connector-local-git" }
sink-markdown-file = { path = "../sinks/sink-markdown-file" }

chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tracing = { workspace = true }
uuid = { workspace = true }
# CancellationToken drives every connector's `ctx.cancel`. Pinned to the
# same 0.7 series every other Dayseam crate already uses so the token
# type is the same struct across the whole workspace (not a
# re-export).
tokio-util = { version = "0.7", features = ["rt"] }
# sqlx is only used for the `SqlitePool` handle we pass through to the
# repos; we stay off its query macros deliberately so the orchestrator
# does not sprout its own ad-hoc SQL — every read / write still flows
# through a typed repo in `dayseam-db`.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
# Used by the cancellation / supersede tests that hand-roll a
# `SourceConnector` to park on `ctx.cancel` rather than lean on the
# MockConnector — the trait is `#[async_trait]`.
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
tempfile = "3"
# Used by `tests/no_cross_crate_leak.rs` to walk the resolved dep graph
# and forbid the orchestrator from depending on any Tauri / desktop
# crate — the orchestrator must stay usable from a future CLI.
cargo_metadata = "0.19"
# Task 2's multi-source dedup test constructs an MR event with a
# `commit_shas` metadata array so the orchestrator's rollup pass
# observes the same shape the future GitLab MR enrichment will emit.
serde_json = { workspace = true }
