[package]
name = "dayseam-secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Secret storage abstraction for Dayseam: macOS Keychain wrapper and in-memory test store."

[dependencies]
