[package]
name = "dayseam-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Dayseam desktop shell (Tauri 2)."

[lib]
name = "dayseam_desktop"
path = "src/lib.rs"

[[bin]]
name = "dayseam-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
tracing = { workspace = true }
tauri = { version = "2", features = [] }
dayseam-core = { path = "../../../crates/dayseam-core" }
dayseam-db = { path = "../../../crates/dayseam-db" }
dayseam-events = { path = "../../../crates/dayseam-events" }
dayseam-secrets = { path = "../../../crates/dayseam-secrets", features = ["keychain"] }
dayseam-orchestrator = { path = "../../../crates/dayseam-orchestrator" }
dayseam-report = { path = "../../../crates/dayseam-report" }
connectors-sdk = { path = "../../../crates/connectors-sdk" }
connector-local-git = { path = "../../../crates/connectors/connector-local-git" }
connector-gitlab = { path = "../../../crates/connectors/connector-gitlab" }
# Cross-platform "open this URL in the default handler" helper. Kept
# as a direct dep of the desktop crate (not the workspace) because
# only the Tauri shell ever needs to shell out to the OS opener — the
# orchestrator and connectors stay pure.
opener = "0.7"
url = "2"
serde = { workspace = true }
# `IpcSecretString` zeroes PAT bytes on drop so a dropped dialog (or a
# command that returns an error) cannot leave the PAT living in the
# freed IPC buffer until whatever writes over it next. The
# `zeroize_derive` feature is off here; the one use-site writes the
# `Drop` impl by hand.
zeroize = { version = "1" }
# Native folder/file picker — fronts the shell's directory chooser so
# users can select scan roots in `AddLocalGitSourceDialog` instead of
# pasting absolute paths. We pair this with `dialog:allow-open` in
# `capabilities/default.json`; nothing else in the plugin is exposed.
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[features]
# `custom-protocol` wires in Tauri's custom-protocol flag for release
# bundles — unchanged from the scaffold.
custom-protocol = ["tauri/custom-protocol"]
# `dev-commands` compiles in the `dev_*` IPC commands (`dev_emit_toast`,
# `dev_start_demo_run`) used by the frontend test harness and the in-app
# dev tray. It is **off by default** so a plain `cargo build --release`
# or `cargo tauri build` ships a binary with no dev surface and no dev
# capability grant. The build script writes `capabilities/dev.json` only
# when this feature is on; `capabilities/default.json` carries only
# production permissions. Development and CI (including `pnpm tauri dev`)
# re-enable it with `--features dev-commands`.
dev-commands = []
default = []
